# full_text_search

./: .gitignore  Cargo.toml  Makefile  README.md
migrations/: 20231020_create_inventory.sql
src/: lib.rs  main.rs  models.rs
src/entities/: documents.rs  inventory.rs  mod.rs
src/models/: mod.rs
src/notifications/: mod.rs
src/search/: memory.rs  mod.rs  optimized_index.rs  tantivy_index.rs
src/storage/: memory.rs  mod.rs  postgres.rs
