[package]
name = "full_text_search"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
axum = { version = "0.7.9", features = ["ws"] }
chrono = { version = "0.4.31", features = ["serde"] }
derive-getters = "0.5.0"
dotenvy = "0.15"
futures = "0.3.30"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sea-orm = { version = "1.1.1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
tantivy = "0.22.0"
tempfile = "3.8.0"
thiserror = "2.0.3"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = { version = "0.1.16", features = ["sync"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"

[dev-dependencies]
tokio-test = "0.4.3"
